--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "install": "^0.13.0",
     "kysely": "^0.25.0",
     "mermaid": "^10.2.2",
-    "next": "13.4.9",
+    "next": "^13.4.12",
     "nodemailer": "^6.9.3",
     "pg": "^8.11.0",
     "postcss": "8.4.26",
