--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "install": "^0.13.0",
     "kysely": "^0.25.0",
     "mermaid": "^10.2.2",
+    "microsoft-cognitiveservices-speech-sdk": "^1.30.1",
     "next": "^13.4.12",
     "nodemailer": "^6.9.3",
     "pg": "^8.11.0",
