--- a/.env.example
+++ b/.env.example
@@ -25,3 +25,7 @@ POSTGRES_DATABASE=yyyyyyy
 POSTGRES_URL=postgres://default:xxxxxxxx@ep-floral-sun-322777-pooler.us-east-1.postgres.vercel-storage.com/yyyyyyy
 SMTP_AUTH_USER=xxxxx@mail.mojotv.cn
 SMTP_AUTH_PASS=xxxxxxxxxxxx
+
+
+SPEECH_KEY=
+SPEECH_REGION=eastus
