--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "scripts": {
     "dev": "next dev",
     "build:next": "next build",
-    "build": "contentlayer build && next build",
-    "build:mdx": "contentlayer build",
+    "build": "node sync_files.js && contentlayer build && next build",
+    "build:mdx": "node sync_files.js && contentlayer build",
     "start": "next start",
     "lint:fix": "next lint --fix",
+    "sync:content": "node sync_files.js",
     "preview": "next build && next start -p 3001",
     "lint": "next lint",
     "prepare": "husky install",
